--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "prueba-tec-pokeverse",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "serve src/ -s",
-    "tailwind": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "serve": "^14.2.4",
-    "tailwindcss": "^3.4.17"
-  },
-  "dependencies": {
-    "@tailwindcss/cli": "^4.0.9",
-    "axios": "^1.7.9"
-  }
+   "name": "prueba-tec-pokeverse",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "dev": "serve src/ -s",
+      "tailwind": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "devDependencies": {
+      "serve": "^14.2.4",
+      "tailwindcss": "^3.4.17",
+      "prettier": "^3.5.3",
+      "prettier-plugin-tailwindcss": "^0.6.11"
+   },
+   "dependencies": {
+      "@tailwindcss/cli": "^4.0.9",
+      "axios": "^1.7.9"
+   }
 }
